@@ -60,6 +60,10 @@ public class Link {
         return "iframe".equals(type);
     }
 
+    public boolean isScript() {
+        return "script".equals(type);
+    }
+
     public String getType() {
         return type;
     }
